<?xml version="1.0"?>
<package format="2">
  <name>leadsense_ros</name>
  <version>1.3.1</version>
  <description>leadsense_ros is a ros wrapper for LeadSense Stereo Camera.</description>
  <maintainer email="leadsense@ilooktech.com">Shanghai Eyevolution Technology Co., Ltd.</maintainer>
  <license>BSD</license>

  <url type="website">http://leadsense.ilooktech.com/</url>
  <url type="repository">https://github.com/ShanghaiEyevolutionTechnology/leadsense_ros</url>
  <url type="bugtracker">https://github.com/ShanghaiEyevolutionTechnology/leadsense_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>sensor_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nodelet</depend>

  <build_depend>urdf</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelet.xml" />
  </export>
</package>
